Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-5082

Compile error: undefined reference to IOBufferReader::is_read_avail_more_than

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 7.1.0
    • Core
    • None

    Description

      autoreconf -fi
      ./configure
      make

      got some error message like below:

      CXXLD traffic_server
      undefined reference to IOBufferReader::is_read_avail_more_than(...)
      

      file: P_IOBuffer.h

      inline bool
      IOBufferReader::is_read_avail_more_than(int64_t size)
      

      should be

      TS_INLINE bool
      IOBufferReader::is_read_avail_more_than(int64_t size)
      

      Attachments

        Issue Links

          Activity

            People

              oknet Chao Xu
              oknet Chao Xu
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 20m
                  1h 20m