TS-5082: define IOBufferReader::is_read_avail_more_than with TS_INLINE keyword